
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ERROR_EXIT ;
 int GOOD_EXIT ;
 int RECV_FLAGS ;
 int bzero (char*,int) ;
 int recv (int,char*,int,int ) ;
 int * strchr (char*,int) ;

int imap_receive(int s, char *buffer, int size)
{
  int result = GOOD_EXIT;
  int char_recv;
  int tot_recv = 0;

  bzero(buffer, size);
  do {
    char_recv = recv(s, &buffer[tot_recv], size - tot_recv, RECV_FLAGS);
    if (char_recv > 0)
      tot_recv += char_recv;
  } while ((char_recv > 0) && (strchr(buffer, 13) == ((void*)0)));

  if (char_recv < 0)
    result = ERROR_EXIT;

  return result;
}
